enable graph opt in python gs

--- a/interactive_engine/assembly/src/conf/graphscope/frontend.vineyard.properties
+++ b/interactive_engine/assembly/src/conf/graphscope/frontend.vineyard.properties
@@ -21,3 +21,5 @@ neo4j.bolt.server.port = FRONTEND_CYPHER_PORT
 # disable the authentication if username or password is not set
 #auth.username = default
 #auth.password = default
+
+graph.planner.is.on = true
