--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -109,7 +109,7 @@ jobs:
         name: interactive_build-${{ github.sha }}
 
     - name: Setup tmate session
-      if: false
+      if: true
       uses: mxschmitt/action-tmate@v3
 
     - name: Extract build artifacts
