--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -319,7 +319,7 @@ jobs:
 
     - name: Test physical plan generation
       run: |
-        cd ${GITHUB_WORKSPACE}/flex/build
+        cd ${GITHUB_WORKSPACE}/interactive_engine/compiler
         cat > /tmp/physical_plan_gen_config.yaml <<EOF
         compiler:
           planner:
@@ -333,10 +333,8 @@ jobs:
         EOF
         echo "  meta.reader.schema.uri: ${GITHUB_WORKSPACE}/flex/interactive/examples/modern_graph/graph.yaml" >> /tmp/physical_plan_gen_config.yaml
         echo "  meta.reader.statistics.uri: ${GITHUB_WORKSPACE}/interactive_engine/compiler/src/test/resources/statistics/modern_statistics.json" >> /tmp/physical_plan_gen_config.yaml
-                
-        ./tests/planner/graph_planner_test ${GITHUB_WORKSPACE}/interactive_engine/compiler/target/compiler-0.0.1-SNAPSHOT.jar:${GITHUB_WORKSPACE}/interactive_engine/compiler/target/libs/ \
-          ${GITHUB_WORKSPACE}/interactive_engine/executor/ir/target/release/ ${GITHUB_WORKSPACE}/flex/interactive/examples/modern_graph/graph.yaml \
-          /tmp/physical_plan_gen_config.yaml "MATCH(n) return count(n);"
+        mvn clean install -DskipTests -Pgraph-planner-jni
+        ./target/native/test_graph_planner
 
     - name: Run End-to-End cypher adhoc ldbc query test
       env:
