fix bugs of jni building and add readme

--- a/interactive_engine/assembly/pom.xml
+++ b/interactive_engine/assembly/pom.xml
@@ -71,5 +71,22 @@
         </dependency>
       </dependencies>
     </profile>
+    <profile>
+      <id>graph-planner-jni</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+              <finalName>graph-planner-jni</finalName>
+              <descriptors>
+                <descriptor>graph-planner-jni.xml</descriptor>
+              </descriptors>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
