--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -54,6 +54,12 @@
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
+      <modules>
+        <module>common</module>
+        <module>executor/engine/pegasus/clients/java/client</module>
+        <module>compiler</module>
+        <module>assembly</module>
+      </modules>
       <build>
         <plugins>
           <plugin>
@@ -75,26 +81,10 @@
                 </configuration>
               </execution>
             </executions>
+            <inherited>false</inherited>
           </plugin>
         </plugins>
       </build>
-    </profile>
-    <profile>
-      <id>graphscope</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <rust.compile.target>v6d</rust.compile.target>
-      </properties>
-      <modules>
-        <module>assembly</module>
-        <module>common</module>
-        <module>executor</module>
-        <module>frontend</module>
-        <module>executor/engine/pegasus/clients/java/client</module>
-        <module>compiler</module>
-      </modules>
     </profile>
     <profile>
       <id>groot</id>
