--- a/interactive_engine/compiler/pom.xml
+++ b/interactive_engine/compiler/pom.xml
@@ -224,36 +224,6 @@
                 </plugins>
             </build>
         </profile>
-            <profile>
-      <id>graph-planner-jni</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>make</id>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <phase>compile</phase>
-                <configuration>
-                  <target>
-                    <ant antfile="build_native.xml">
-                      <target name="graph_planner"></target>
-                    </ant>
-                  </target>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
     </profiles>
 
     <build>
@@ -324,6 +294,7 @@
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>generate-sources</id>
                         <phase>generate-sources</phase>
                         <goals>
                             <goal>add-source</goal>
