--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -51,6 +51,9 @@
     </profile>
     <profile>
       <id>graph-planner-jni</id>
+      <properties>
+        <skip.native>false</skip.native>
+      </properties>
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
@@ -78,6 +81,7 @@
                       <target name="graph_planner"></target>
                     </ant>
                   </target>
+                  <skip>${skip.native}</skip>
                 </configuration>
               </execution>
             </executions>
@@ -717,6 +721,11 @@
         <artifactId>interactive</artifactId>
         <version>${interactive.sdk.version}</version>
         <classifier>${interactive.sdk.classifier}</classifier>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <version>2.2.4.RELEASE</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
