--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -1,6 +1,6 @@
 log_level: INFO
 verbose_level: 10
-default_graph: papers2 
+default_graph: modern_graph 
 compute_engine:
   type: hiactor
   workers:
