--- a/flex/interactive/examples/papers/graph.yaml
+++ b/flex/interactive/examples/papers/graph.yaml
@@ -3,106 +3,48 @@ version: v0.1
 schema:
   vertex_types:
     - type_id: 0
-      type_name: Paper
+      type_name: Github
       properties:
         - property_id: 0
           property_name: id
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 1
-          property_name: published
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 2
-          property_name: year
-          property_type:
-            primitive_type: DT_SIGNED_INT32
-        - property_id: 3
-          property_name: month
-          property_type:
-            primitive_type: DT_SIGNED_INT32
-        - property_id: 4
-          property_name: title
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 5
-          property_name: authors
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 6
-          property_name: summary
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 7
-          property_name: journal_ref
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 8
-          property_name: doi
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 9
-          property_name: primary_category
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 10
-          property_name: categories
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 11
-          property_name: bib
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 12
-          property_name: data_id
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 13
           property_name: node_type
           property_type:
             string:
-              long_text: ''
+              long_text: ""
+        - property_id: 2
+          property_name: github
+          property_type:
+            string:
+              long_text: ""
       primary_keys:
         - id
     - type_id: 1
-      type_name: Background
+      type_name: Baseline
       properties:
         - property_id: 0
           property_name: id
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 1
           property_name: node_type
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 2
-          property_name: problem_definition
+          property_name: name
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 3
-          property_name: problem_value
+          property_name: paper_name
           property_type:
             string:
-              long_text: ''
-        - property_id: 4
-          property_name: existing_solutions
-          property_type:
-            string:
-              long_text: ''
+              long_text: ""
       primary_keys:
         - id
     - type_id: 2
@@ -112,178 +54,220 @@ schema:
           property_name: id
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 1
           property_name: node_type
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 2
           property_name: original
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 3
           property_name: summary
           property_type:
             string:
-              long_text: ''
+              long_text: ""
       primary_keys:
         - id
     - type_id: 3
-      type_name: Challenge
-      properties:
-        - property_id: 0
-          property_name: id
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 1
-          property_name: node_type
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 2
-          property_name: name
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 3
-          property_name: description
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 4
-          property_name: solution
-          property_type:
-            string:
-              long_text: ''
-      primary_keys:
-        - id
-    - type_id: 4
-      type_name: Baseline
-      properties:
-        - property_id: 0
-          property_name: id
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 1
-          property_name: node_type
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 2
-          property_name: name
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 3
-          property_name: paper_name
-          property_type:
-            string:
-              long_text: ''
-      primary_keys:
-        - id
-    - type_id: 5
-      type_name: Experiment
-      properties:
-        - property_id: 0
-          property_name: id
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 1
-          property_name: node_type
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 2
-          property_name: name
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 3
-          property_name: settings
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 4
-          property_name: results
-          property_type:
-            string:
-              long_text: ''
-      primary_keys:
-        - id
-    - type_id: 6
-      type_name: Github
-      properties:
-        - property_id: 0
-          property_name: id
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 1
-          property_name: node_type
-          property_type:
-            string:
-              long_text: ''
-        - property_id: 2
-          property_name: github
-          property_type:
-            string:
-              long_text: ''
-      primary_keys:
-        - id
-    - type_id: 7
       type_name: Solution
       properties:
         - property_id: 0
           property_name: id
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 1
           property_name: node_type
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 2
           property_name: name
           property_type:
             string:
-              long_text: ''
+              long_text: ""
         - property_id: 3
           property_name: description
           property_type:
             string:
-              long_text: ''
+              long_text: ""
+      primary_keys:
+        - id
+    - type_id: 4
+      type_name: Experiment
+      properties:
+        - property_id: 0
+          property_name: id
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 1
+          property_name: node_type
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 2
+          property_name: name
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 3
+          property_name: settings
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 4
+          property_name: results
+          property_type:
+            string:
+              long_text: ""
+      primary_keys:
+        - id
+    - type_id: 5
+      type_name: Background
+      properties:
+        - property_id: 0
+          property_name: id
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 1
+          property_name: node_type
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 2
+          property_name: problem_definition
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 3
+          property_name: problem_value
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 4
+          property_name: existing_solutions
+          property_type:
+            string:
+              long_text: ""
+      primary_keys:
+        - id
+    - type_id: 6
+      type_name: Paper
+      properties:
+        - property_id: 0
+          property_name: id
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 1
+          property_name: published
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 2
+          property_name: year
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 3
+          property_name: month
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 4
+          property_name: title
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 5
+          property_name: authors
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 6
+          property_name: summary
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 7
+          property_name: journal_ref
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 8
+          property_name: doi
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 9
+          property_name: primary_category
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 10
+          property_name: categories
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 11
+          property_name: bib
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 12
+          property_name: data_id
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 13
+          property_name: node_type
+          property_type:
+            string:
+              long_text: ""
+      primary_keys:
+        - id
+    - type_id: 7
+      type_name: Challenge
+      properties:
+        - property_id: 0
+          property_name: id
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 1
+          property_name: node_type
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 2
+          property_name: name
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 3
+          property_name: description
+          property_type:
+            string:
+              long_text: ""
+        - property_id: 4
+          property_name: solution
+          property_type:
+            string:
+              long_text: ""
       primary_keys:
         - id
   edge_types:
     - type_id: 0
-      type_name: Has
+      type_name: Paper_Has_Github
       properties: []
       vertex_type_pair_relations:
-        - destination_vertex: Background
-          relation: MANY_TO_MANY
-          source_vertex: Paper
-        - destination_vertex: Challenge
-          relation: MANY_TO_MANY
-          source_vertex: Paper
-        - destination_vertex: Baseline
-          relation: MANY_TO_MANY
-          source_vertex: Paper
-        - destination_vertex: Contribution
-          relation: MANY_TO_MANY
-          source_vertex: Paper
-        - destination_vertex: Experiment
-          relation: MANY_TO_MANY
-          source_vertex: Paper
         - destination_vertex: Github
-          relation: MANY_TO_MANY
-          source_vertex: Paper
-        - destination_vertex: Solution
           relation: MANY_TO_MANY
           source_vertex: Paper
     - type_id: 1
@@ -291,6 +275,48 @@ schema:
       properties: []
       vertex_type_pair_relations:
         - destination_vertex: Paper
+          relation: MANY_TO_MANY
+          source_vertex: Paper
+    - type_id: 2
+      type_name: Paper_Has_Background
+      properties: []
+      vertex_type_pair_relations:
+        - destination_vertex: Background
+          relation: MANY_TO_MANY
+          source_vertex: Paper
+    - type_id: 3
+      type_name: Paper_Has_Solution
+      properties: []
+      vertex_type_pair_relations:
+        - destination_vertex: Solution
+          relation: MANY_TO_MANY
+          source_vertex: Paper
+    - type_id: 4
+      type_name: Paper_Has_Experiment
+      properties: []
+      vertex_type_pair_relations:
+        - destination_vertex: Experiment
+          relation: MANY_TO_MANY
+          source_vertex: Paper
+    - type_id: 5
+      type_name: Paper_Has_Contribution
+      properties: []
+      vertex_type_pair_relations:
+        - destination_vertex: Contribution
+          relation: MANY_TO_MANY
+          source_vertex: Paper
+    - type_id: 6
+      type_name: Paper_Has_Challenge
+      properties: []
+      vertex_type_pair_relations:
+        - destination_vertex: Challenge
+          relation: MANY_TO_MANY
+          source_vertex: Paper
+    - type_id: 7
+      type_name: Paper_Has_Baseline
+      properties: []
+      vertex_type_pair_relations:
+        - destination_vertex: Baseline
           relation: MANY_TO_MANY
           source_vertex: Paper
 
