--- a/interactive_engine/compiler/src/test/resources/config/modern/graph.yaml
+++ b/interactive_engine/compiler/src/test/resources/config/modern/graph.yaml
@@ -100,6 +100,26 @@ schema:
               date32:
       primary_keys:
         - id
+    - type_name: "@person"
+      type_id: 2
+      x_csr_params:
+        max_vertex_num: 100
+      properties:
+        - property_id: 0
+          property_name: id
+          property_type:
+            primitive_type: DT_SIGNED_INT64
+        - property_id: 1
+          property_name: name
+          property_type:
+            string:
+              long_text:
+        - property_id: 2
+          property_name: age
+          property_type:
+            primitive_type: DT_SIGNED_INT32
+      primary_keys:
+        - id
   edge_types:
     - type_name: knows
       type_id: 0
@@ -117,6 +137,17 @@ schema:
       vertex_type_pair_relations:
         - source_vertex: person
           destination_vertex: software
+          relation: MANY_TO_MANY
+      properties:
+        - property_id: 0
+          property_name: weight
+          property_type:
+            primitive_type: DT_DOUBLE
+    - type_name: contains
+      type_id: 2
+      vertex_type_pair_relations:
+        - source_vertex: "@person"
+          destination_vertex: "@person"
           relation: MANY_TO_MANY
       properties:
         - property_id: 0
