adapt interactive to ir_align_type
Committed-by: xiaolei.zl from Dev container

--- a/flex/utils/CMakeLists.txt
+++ b/flex/utils/CMakeLists.txt
@@ -32,6 +32,7 @@ set(CODE_GEN_PROTOBUF_FILES
         ${GIE_COMPILER_PROTO_DIR}/schema.proto
         ${GIE_COMPILER_PROTO_DIR}/type.proto
         ${GIE_COMPILER_PROTO_DIR}/stored_procedure.proto
+        ${GIE_COMPILER_PROTO_DIR}/basic_type.proto
         ${GIE_COMPILER_PROTO_JOB_DIR}/job_service.proto
 )
 
