--- a/flex/interactive/sdk/python/setup.cfg
+++ b/flex/interactive/sdk/python/setup.cfg
@@ -3,7 +3,7 @@ profile = black
 ensure_newline_before_comments = True
 line_length = 88
 force_single_line = True
-skip = build/,dist/,gs_interactive/api/,gs_interactive/api_response.py,gs_interactive/configuration.py,gs_interactive/exceptions.py,gs_interactive/models/,gs_interactiverest.py,
+skip = build/,dist/,gs_interactive/api/,gs_interactive/api_response.py,gs_interactive/configuration.py,gs_interactive/exceptions.py,gs_interactive/models/,gs_interactiverest.py,gs_interactive/api_client.py,gs_interactive/__init__.py,gs_interactive/rest.py
 skip_glob = *_pb2.py,*_pb2_grpc.py,build/*
 
 [flake8]
