--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -218,6 +218,10 @@ jobs:
         bash hqps_sdk_test.sh ${TMP_INTERACTIVE_WORKSPACE} ./interactive_config_test.yaml python
         sed -i 's/temp_workspace/interactive_workspace/g' ./interactive_config_test.yaml
         sed -i 's/thread_num_per_worker: 4/thread_num_per_worker: 1/g' ./interactive_config_test.yaml
+
+    - name: Setup tmate session
+      if: true
+      uses: mxschmitt/action-tmate@v3
   
     - name: Robustness test 
       env:
