add timeout conf in GraphConfig
Committed-by: xiaolei.zl from Dev container

--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -26,6 +26,7 @@ compiler:
       statistics:
         uri: http://localhost:7777/v1/graph/%s/statistics
         interval: 86400000 # ms
+      timeout: 1000 # ms
   endpoint:
     default_listen_address: localhost
     bolt_connector:
