--- a/interactive_engine/compiler/conf/ir.compiler.properties
+++ b/interactive_engine/compiler/conf/ir.compiler.properties
@@ -68,5 +68,8 @@ calcite.default.charset: UTF-8
 # set the interval in milliseconds to fetch graph schema
 # graph.meta.schema.fetch.interval.ms: 1000
 
-# set the timeout in milliseconds to fetch graph statistics
+# set the interval in milliseconds to fetch graph statistics
 # graph.meta.statistics.fetch.interval.ms: 86400000l
+
+# set the timeout in milliseconds to fetch graph statistics
+# graph.meta.fetch.timeout.ms: 1000
