--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -5,7 +5,7 @@ compute_engine:
   type: hiactor
   workers:
     - localhost:10000
-  thread_num_per_worker: 1
+  thread_num_per_worker: 4
   store:
     type: cpp-mcsr
   metadata_store:
@@ -26,6 +26,7 @@ compiler:
       statistics:
         uri: http://localhost:7777/v1/graph/%s/statistics
         interval: 86400000 # ms
+      timeout: 1000 # ms
   endpoint:
     default_listen_address: localhost
     bolt_connector:
