fix the bug occured by empty STORE_COUNT setting

--- a/charts/graphscope-store/templates/frontend/statefulset.yaml
+++ b/charts/graphscope-store/templates/frontend/statefulset.yaml
@@ -97,6 +97,8 @@ spec:
           env:
             - name: ROLE
               value: "frontend"
+            - name: STORE_COUNT
+              value: "{{ .Values.store.replicaCount }}"
             - name: POD_IP
               valueFrom:
                 fieldRef:
