--- a/charts/graphscope-store/templates/store/statefulset-backup.yaml
+++ b/charts/graphscope-store/templates/store/statefulset-backup.yaml
@@ -101,6 +101,8 @@ spec:
           env:
             - name: ROLE
               value: "store"
+            - name: STORE_COUNT
+              value: "{{ .Values.store.replicaCount }}"
             - name: POD_IP
               valueFrom:
                 fieldRef:
