--- a/interactive_engine/executor/engine/pegasus/pegasus/Cargo.toml
+++ b/interactive_engine/executor/engine/pegasus/pegasus/Cargo.toml
@@ -27,6 +27,7 @@ ahash = "0.7.2"
 dot = "0.1.4"
 dyn-clonable = "0.9.0"
 opentelemetry = { version = "0.22.0", features = ["trace", "metrics"] }
+num_cpus = "1.11"
 
 [features]
 mem = ["pegasus_memory/mem"]
