--- a/charts/graphscope-store/templates/configmap.yaml
+++ b/charts/graphscope-store/templates/configmap.yaml
@@ -171,6 +171,10 @@ data:
     # export MALLOC_CONF=prof:true,lg_prof_interval:29,lg_prof_sample:19,prof_prefix=/tmp
 
     export RUST_BACKTRACE=1
+    if [ "$ROLE" = "frontend" ]; then
+      echo "Starting groot-http Spring Boot service..."
+      java -jar ${GRAPHSCOPE_HOME}/groot/lib/groot-http-0.0.1-SNAPSHOT.jar > /var/log/graphscope/groot-http.log 2>&1 &
+    fi
     ${GRAPHSCOPE_HOME}/groot/bin/store_ctl.sh start ${ROLE}  # || sleep infinity
   portal_setup.sh: |-
     #!/bin/bash
