introducing sharding mode to Interactive
Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -404,6 +404,7 @@ jobs:
       matrix:
         BUILD_TEST: [ON, OFF]
         BUILD_ODPS_FRAGMENT_LOADER: [ON, OFF]
+        DEFAULT_SHARDING_MODE: ["exclusive", "cooperative"]
     steps:
     - uses: actions/checkout@v4
 
