--- a/flex/engines/http_server/CMakeLists.txt
+++ b/flex/engines/http_server/CMakeLists.txt
@@ -38,5 +38,6 @@ if (Hiactor_FOUND)
     target_link_libraries(flex_server otel)
   endif()
   target_link_libraries(flex_server flex_metadata_store)
+  target_compile_definitions(flex_server PRIVATE DEFAULT_SHARDING_MODE="${DEFAULT_SHARDING_MODE}")
   install_without_export_flex_target(flex_server)
 endif ()
