--- a/interactive_engine/compiler/src/main/native/CMakeLists.txt
+++ b/interactive_engine/compiler/src/main/native/CMakeLists.txt
@@ -42,6 +42,7 @@ set(CODE_GEN_PROTOBUF_FILES
         ${GIE_COMPILER_PROTO_DIR}/schema.proto
         ${GIE_COMPILER_PROTO_DIR}/type.proto
         ${GIE_COMPILER_PROTO_DIR}/stored_procedure.proto
+        ${GIE_COMPILER_PROTO_DIR}/basic_type.proto
 )
 
 #create directory first
