--- a/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
+++ b/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
@@ -9,15 +9,23 @@ compute_engine:
     - localhost:10000
   thread_num_per_worker: 1
 compiler:
+  physical:
+    opt:
+      config: proto
   planner:
     is_on: true
-    opt: RBO
+    opt: CBO
     rules:
+      - FilterIntoJoinRule
       - FilterMatchRule
+      - ExtendIntersectRule
+      - ExpandGetVFusionRule
   meta:
     reader:
       schema:
         uri: ./target/test-classes/config/modern/graph.yaml
+      functions:
+        uri: ./src/main/resources/conf/graph_functions.yaml
   endpoint:
     default_listen_address: 0.0.0.0  # default localhost
     bolt_connector:   # for cypher, there may be other connectors, such as bolt_connector, https_connector
