--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -50,6 +50,48 @@
       </modules>
     </profile>
     <profile>
+      <id>graph-planner-jni</id>
+      <properties>
+        <skip.native>false</skip.native>
+        <skip.ir.core>true</skip.ir.core>
+      </properties>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <modules>
+        <module>common</module>
+        <module>executor/engine/pegasus/clients/java/client</module>
+        <module>compiler</module>
+        <module>assembly</module>
+      </modules>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>make</id>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <phase>compile</phase>
+                <configuration>
+                  <target>
+                    <ant antfile="compiler/build_native.xml">
+                      <target name="graph_planner"></target>
+                    </ant>
+                  </target>
+                  <skip>${skip.native}</skip>
+                </configuration>
+              </execution>
+            </executions>
+            <inherited>false</inherited>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>graphscope</id>
       <activation>
         <activeByDefault>true</activeByDefault>
@@ -698,6 +740,11 @@
         <version>${interactive.sdk.version}</version>
         <classifier>${interactive.sdk.classifier}</classifier>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <version>2.2.4.RELEASE</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -884,6 +931,11 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.0.0</version>
       </plugin>
     </plugins>
   </build>
