--- a/.github/workflows/gss.yml
+++ b/.github/workflows/gss.yml
@@ -102,6 +102,11 @@ jobs:
         cp -r flex/interactive/examples/movies /tmp/gstest/
         cd interactive_engine/groot-client && ./gopt_groot_test.sh
 
+    - name: Groot Http Test
+      run: |
+        . ${HOME}/.graphscope_env
+        cd interactive_engine/groot-client && ./groot_http_test.sh
+
     - name: Upload tools for helm test to Artifact
       uses: actions/upload-artifact@v4
       with:
